--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hemanth Naidu | Cybersecurity & Java Developer</title>
+    <title>Thota Hemanth | Cybersecurity & Java Developer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
@@ -553,7 +553,7 @@
     <header>
         <div class="container">
             <nav>
-                <a href="#home" class="logo">Hemanth Naidu</a>
+                <a href="#home" class="logo">Thota Hemanth</a>
                 <ul class="nav-links" id="navLinks">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -1170,4 +1170,5 @@ ${message}
         console.log('%c📱 WhatsApp: +91-7981410064', 'color: #94a3b8;');
     </script>
 </body>
+
 </html>
