--- a/index.html
+++ b/index.html
@@ -273,12 +273,16 @@
         }
 
         .project-card {
-            background: rgba(30, 41, 59, 0.6);
-            border-radius: 12px;
-            overflow: hidden;
-            border: 1px solid rgba(56, 189, 248, 0.1);
-            transition: transform 0.3s;
-        }
+    background: rgba(30, 41, 59, 0.6);
+    border-radius: 12px;
+    overflow: visible;
+    border: 1px solid rgba(56, 189, 248, 0.1);
+    transition: transform 0.3s;
+}
+.project-content {
+    min-height: 280px;
+}
+
 
         .project-card:hover {
             transform: translateY(-10px);
@@ -1220,3 +1224,4 @@ ${message}
 </body>
 
 </html>
+
